css-mobile-bugfix
added css augmenting container parameters to make images not get stretched on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,18 @@
 body{
     background: black;
 }
-img {
+
+.container{
+    display: flex;
+    flex-direction: column;
+}
+.container section:first-child {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 25px;
+}
+.container img {
+    width: 125px;
     height: auto;
 }
 /*This is a custom overrride for h2 that would allow us to set a certain font */
